Upgraded to .NET 8 and moved repo structure around to standard layout

--- a/src/OneTimePad.Website/OneTimePad.Website.csproj
+++ b/src/OneTimePad.Website/OneTimePad.Website.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <UserSecretsId>f06204b9-7e6b-4828-91ee-a16b2ae32227</UserSecretsId>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
